# gazelle-go-proto-bug

./: BUILD  WORKSPACE  go.mod  go.sum  main.go
pgpb/: BUILD.bazel  secrets.proto
