load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "pgpb_proto",
    srcs = ["secrets.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "pgpb_go_proto",
    importpath = "github.com/jschaf/gazelle-go-proto-bug/pgpb",
    proto = ":pgpb_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "pgpb",
    embed = [":pgpb_go_proto"],
    importpath = "github.com/jschaf/gazelle-go-proto-bug/pgpb",
    visibility = ["//visibility:public"],
)
